--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,35 @@
   padding: 0;
   font-family: 'PT Sans', sans-serif;
 }
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #F9F7E8;
+  height: 100%;
+}
+
+.title-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+  margin-bottom: 2%;
+  margin-right: 30%;
+  margin-left: 30%;
+}
+
+.text-container {
+
+}
+
+p {
+  color: #61BFAD;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-right: 30%;
+  margin-left: 30%;
+  
+}
