--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(180deg, #EFE8D8 0%, #F9F7E8 100%);
+    background: linear-gradient(180deg, #F1C3B8 30%, #F9F7E8 100%);
     height: 80px;
     display: flex;
     justify-content: center;
